<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home_main"
        android:icon="@drawable/ic_featured_play_list_black_24dp"
        android:textStyle="bold"
        android:title="@string/title_home_main"
        />

    <item
        android:id="@+id/navigation_statistic"
        android:icon="@drawable/ic_equalizer_black_24dp"
        android:textStyle="bold"
        android:title="@string/title_statistic" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_bubble_chart_black_24dp"
        android:textStyle="bold"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:textStyle="bold"
        android:title="@string/title_map_trainer" />



</menu>
