<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home_main"
    >

    <fragment
        android:id="@+id/navigation_home_main"
        android:name="com.fitcheck.ui.entries.HomeMainFragment"
        android:label="@string/title_home_main"
        tools:layout="@layout/fragment_home_main" />

    <fragment
        android:id="@+id/navigation_statistic"
        android:name="com.fitcheck.ui.statistic.StatisticFragment"
        android:label="@string/title_statistic"
        tools:layout="@layout/fragment_statistic" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.fitcheck.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_map_trainer"
        android:name="com.fitcheck.ui.more.SettingsFragment"
        android:label="@string/title_map_trainer"
        tools:layout="@layout/fragment_map_trainer" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.fitcheck.ui.more.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>